--- a/src/main/resources/templates/product/product-form.html
+++ b/src/main/resources/templates/product/product-form.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Add product</title>
+    <title>Product</title>
 </head>
 
 <body>
