--- a/src/main/resources/templates/product/products.html
+++ b/src/main/resources/templates/product/products.html
@@ -50,7 +50,7 @@
         <td>
             <a th:href="@{'/products/' + ${product.id} + '/edit'}">
                 Edit
-            </a>
+            </a>&nbsp;
             <a th:href="@{'/products/' + ${product.id} + '/delete'}"
                onclick="return confirm('Are you sure you want to delete?')">
                 Delete
